<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:text="CONNOISSEUR" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/activity_homescreen_layout_spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/Cost"
                android:layout_gravity="left|center_vertical"
                android:spinnerMode="dropdown" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/Distance"
                android:layout_gravity="center_vertical|right"
                android:spinnerMode="dropdown" />


            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/Type"
                android:spinnerMode="dropdown"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_homescreen_layout_buttons"
            android:layout_below="@+id/activity_homescreen_layout_spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="end">

            <Button
                android:id="@+id/activity_homescreen_searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SEARCH"
                android:onClick="goToRestaurantSelection"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
